fixed grid alignment,

--- a/css/style.css
+++ b/css/style.css
@@ -58,19 +58,35 @@ ol li a
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
     font-size: 14pt;
+
+    display: grid;;
+    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+}
+
+#portfolio h3
+{
+    grid-column: 1/3;
 }
 
 #portfolio figure
 {
-    max-width: 25rem;
-    float:left;
+    max-width: 45rem;
     border: .25rem ridge grey;
-    
+
+    justify-self: center;
+}
+
+#portfolio figure img
+{
+    max-width: 100%;
 }
 
 #portfolio figcaption
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+    text-align: center;
     font-size: 12pt;
     margin: 1rem;
 }
